# KI-Gegen-Rechts

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_Experiment_txt-message_anaylser_gpt3.5.ipynb
src/ki_gegen_rechts/: analyser.py  llm_chains.py  prompts.py  utils.py
